--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body{
 
 h1{
     color: blue;
+    text-align: center;
 }
 h2{
     color: chocolate;
@@ -17,4 +18,12 @@ li{
 img{
     width: 460px;
     height: auto;
+}
+.left{
+    float: left;
+    width: 50%;
+}
+.right{
+    float: right;
+    width: 50%;
 }
