--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body{
     font-style: normal;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: larger;
-    margin: auto;
+    margin: 10px;
     text-align: justify;
 
 }
