--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ p{
     background-size: cover;
     text-align: center;
     align-items: center;
-    border: 4px solid #6ddccf;
+    border: 4px solid #f77f00;
     font-style: oblique;
     margin-bottom: 15px;
 
@@ -43,8 +43,12 @@ h1{
     text-align: center;
     font-weight: 900;
 }
+span{
+    font-weight: 100;
+    color: #f77f00;
+}
 h2{
-    color: chocolate;
+    color: #f77f00;
     font-weight: 800;
 }
 h3{
@@ -119,7 +123,7 @@ img{
     bottom: 0;
     height: 40px;
     background-color: #003049;
-    color: white;
+    color: #f77f00;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
